--- a/index.html
+++ b/index.html
@@ -1,59 +1,36 @@
- <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="fa">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="LiveNerkh | قیمت لحظه‌ای دلار، طلا، سکه و ارز دیجیتال" />
-    <title>LiveNerkh | قیمت لحظه‌ای دلار، طلا، سکه و ارز دیجیتال</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Live Nerkh - قیمت آنلاین</title>
 </head>
 <body>
-    <header>
-        <h1>LiveNerkh</h1>
-        <nav>
-            <a href="#">دلار</a>
-            <a href="#">طلا</a>
-            <a href="#">سکه</a>
-            <a href="#">ارز دیجیتال</a>
-            <a href="#">اخبار</a>
-        </nav>
-    </header>
+    <h1>قیمت‌های آنلاین</h1>
+    <ul id="prices"></ul>
 
-    <section class="banner">
-        <h2>قیمت لحظه‌ای بازار آزاد و صرافی</h2>
-    </section>
+    <script>
+        const serverURL = 'https://script.google.com/macros/s/AKfycbxYRnJkKi17KAA6H_PlwtXIr47DzJS22qWXuVvuBpkR2NaE-NmtpFoUv6I80oPwRr-6dw/exec';
 
-    <section class="prices">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>عنوان</th>
-                    <th>قیمت</th>
-                    <th>تغییر</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>دلار آزاد</td>
-                    <td>50,000 تومان</td>
-                    <td class="price-up">+200</td>
-                </tr>
-                <tr>
-                    <td>طلا 18 عیار</td>
-                    <td>2,500,000 تومان</td>
-                    <td class="price-down">-10,000</td>
-                </tr>
-                <tr>
-                    <td>بیت‌کوین</td>
-                    <td>1,600,000,000 تومان</td>
-                    <td class="price-up">+50,000,000</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
+        async function loadPrices() {
+            try {
+                const response = await fetch(serverURL);
+                const data = await response.json();
 
-    <footer>
-        <p>© 2025 LiveNerkh | تمامی حقوق محفوظ است.</p>
-    </footer>
+                const pricesList = document.getElementById('prices');
+                pricesList.innerHTML = '';
+
+                // قیمت دلار
+                pricesList.innerHTML += `<li>قیمت دلار: ${data.dollar}</li>`;
+                // زمان به‌روزرسانی
+                pricesList.innerHTML += `<li>زمان به‌روزرسانی: ${new Date(data.updated).toLocaleString()}</li>`;
+
+            } catch (error) {
+                console.error('خطا در دریافت اطلاعات:', error);
+            }
+        }
+
+        loadPrices();
+        setInterval(loadPrices, 60000);
+    </script>
 </body>
 </html>
